# ocaml-typed

./: dune-project  typed.opam
lib/: dune  eval.ml  expression.ml  lexer.mll  parser.mly  typecheck.ml
test/: dune
